--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,13 @@ main {
 }
 
 section {
-  
+  display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  width: 80%;
+  width: 100%;
   max-width: 1000px;
   margin-top: 2rem;
+  margin: 2rem auto;
 }
 
 h1 {
@@ -56,7 +57,7 @@ li {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 10px 16px;
+  padding: 5px 16px;
   margin: 8px 0;
   border-radius: 20px;
   background-color: #444;
@@ -65,6 +66,9 @@ li {
 }
 
 button {
+  display: flex;        
+  justify-content: center;
+  align-items: center;   
   border: none;
   border-radius: 50%;
   width: 28px;
@@ -73,12 +77,15 @@ button {
   font-weight: bold;
   background-color: white;
   color: black;
+  align-items: center;
   cursor: pointer;
+  padding: 0;
 }
 
 .ingredientColumn {
-  flex: 1;
+  flex:auto;
   padding: 1rem;
+  
 }
 
 .burgerColumn {
